--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "houdunren-vue-form",
+  "name": "hd-vue-form",
   "description": "A Vue.js project",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "houdunwang <2300071698@qq.com>",
   "license": "MIT",
-  "main": "dist/vue-form.js",
+  "main": "dist/hd-vue-form.js",
   "keywords": [
     "vue",
     "houdunren",
@@ -14,12 +14,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/houdunwang/vue-form"
+    "url": "git+https://github.com/houdunwang/hd-vue-form"
   },
   "bugs": {
-    "url": "https://github.com/houdunwang/vue-form/issues"
+    "url": "https://github.com/houdunwang/hd-vue-form/issues"
   },
-  "homepage": "https://github.com/houdunwang/vue-form#readme",
+  "homepage": "https://github.com/houdunwang/hd-vue-form#readme",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
