--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hd-vue-form",
+  "name": "houdunren-vue-form",
   "description": "A Vue.js project",
   "version": "1.0.2",
   "author": "houdunwang <2300071698@qq.com>",
   "license": "MIT",
-  "main": "dist/hd-vue-form.js",
+  "main": "dist/houdunren-vue-form.js",
   "keywords": [
     "vue",
     "houdunren",
@@ -14,17 +14,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/houdunwang/hd-vue-form"
+    "url": "git+https://github.com/houdunwang/houdunren-vue-form"
   },
   "bugs": {
-    "url": "https://github.com/houdunwang/hd-vue-form/issues"
+    "url": "https://github.com/houdunwang/houdunren-vue-form/issues"
   },
-  "homepage": "https://github.com/houdunwang/hd-vue-form#readme",
+  "homepage": "https://github.com/houdunwang/houdunren-vue-form#readme",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "element-ui": "^2.4.2",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -40,8 +41,12 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^6.0.7",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
