--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "houdunren-vue-form",
   "description": "A Vue.js project",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "houdunwang <2300071698@qq.com>",
   "license": "MIT",
   "main": "dist/houdunren-vue-form.js",
@@ -21,11 +21,12 @@
   },
   "homepage": "https://github.com/houdunwang/houdunren-vue-form#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "element-ui": "^2.4.2",
+    "lodash": "^4.17.10",
     "vue": "^2.5.11"
   },
   "browserslist": [
