--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
